# swift-numerics

./: Package.swift
Sources/: CMakeLists.txt
Sources/Roots/: CMakeLists.txt  README.md
Sources/Roots/NonLinear/: CMakeLists.txt  NonLinearRootFinder.swift
Sources/Roots/Polynomial/: Horner.swift  PolynomialRootFinder.swift
Tests/RootsTests/: NonLinearFunctionsTest.swift
